--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
       <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div></div>
+    <header>
+      <div class= "logo">
+        <img src="resources\images\ic-logo.svg" alt="Problem loading page">
+      </div>
+      <div class="colmar">
+        <h2>COLMARACADEMY</h2>
+      </div>
+      <div class="flex-end">
+        <nav>
+          <li>On Campus</li>
+          <li>Online</li>
+          <li>For Companies</li>
+          <li>Sign in</li>
+        </nav>
+      </div>
+    </header>
+    <div class="banner">
+      <div class ="first-pic">
+
+      </div>
+      <div class="learn">
+        <h1>Learn Something<br>New Everyday</h1>
+        <h2>Lorem ipsum dolor sit amet consectetur adipiscing elit.</h2>
+        <div class="start-btn">
+          <span>Start Here</span>
+        </div>
+      </div>
+
+    </div>
   </body>
   <footer></footer>
 </html>
