--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <!-- headder -->
     <header>
       <div class= "logo">
         <img src="resources\images\ic-logo.svg" alt="Problem loading page">
@@ -24,10 +25,12 @@
         </nav>
       </div>
     </header>
+    <!-- Banner -->
     <div class="banner">
+    <!-- main Pic  -->
       <div class ="first-pic">
-
       </div>
+      <!--learn section  -->
       <div class="learn">
         <h1>Learn Something<br>New Everyday</h1>
         <h2>Lorem ipsum dolor sit amet consectetur adipiscing elit.</h2>
@@ -35,8 +38,32 @@
           <span>Start Here</span>
         </div>
       </div>
+    </div>
+    <!--2nd section practice  -->
+    <div class="container2">
+      <div class="container1-A">
+        <div class="practice"></div>
+          <h1>Practice</h1>
+      </div>
+      <div class="orientation top-Bot">
+        <div class="orientation-date"></div>
+        <div class="campus"></div>
+        <div class="guest"></div>
 
+      </div>
+    </div>
+  </div>
+    <!-- 3rd section learn -->
+    <div class="learning">
+      <div></div>
+      <div></div>
+    </div>
+    <!-- 4th section thesis -->
+    <div class="thesis">
+      <div></div>
+      <div></div>
     </div>
   </body>
+  <!-- Footer -->
   <footer></footer>
 </html>
