--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     </div>
     <!--2nd section practice  -->
     <div class="container2">
-      <div class="container1-A">
+      <div class="container2-A">
         <div class="practice"></div>
           <h1>Practice</h1>
       </div>
-      <div class="orientation top-Bot">
+      <div class="orientation top-bot">
         <div class="orientation-date"></div>
         <div class="campus"></div>
         <div class="guest"></div>
@@ -54,15 +54,35 @@
     </div>
   </div>
     <!-- 3rd section learn -->
-    <div class="learning">
-      <div></div>
-      <div></div>
+    <div class="container3">
+      <div class="start-learning top-bot">
+
+      </div>
+      <div class="all-course">
+        <div class="course-top">
+          <div>
+
+        </div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="course-btm">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
     </div>
     <!-- 4th section thesis -->
-    <div class="thesis">
+    <div class="container4">
+    <div class="thesis"></div>
+    <div>
       <div></div>
       <div></div>
     </div>
+
+    </div>
+  </div>
   </body>
   <!-- Footer -->
   <footer></footer>
