--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!--learn section  -->
       <div class="learn">
         <h1>Learn Something<br>New Everyday</h1>
-        <h2>Lorem ipsum dolor sit amet consectetur adipiscing elit.</h2>
+        <div class="ban-state"><h2>Lorem ipsum dolor sit amet consectetur adipiscing elit.</h2></div>
         <div class="start-btn">
           <span>Start Here</span>
         </div>
@@ -45,6 +45,8 @@
         <div class="practice"></div>
           <h1>Practice</h1>
       </div>
+
+      <!--Orientation -->
       <div class="orientation top-bot">
         <div class="orientation-date"></div>
         <div class="campus"></div>
@@ -58,7 +60,7 @@
       <div class="start-learning top-bot">
 
       </div>
-      <div class="all-course">
+      <div class="course-box">
         <div class="course-top">
           <div>
 
@@ -85,5 +87,5 @@
   </div>
   </body>
   <!-- Footer -->
-  <footer></footer>
+  <footer>Alan</footer>
 </html>
