--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
 
       <!--Orientation -->
       <div class="orientation top-bot">
-        <div class="orientation-date"></div>
-        <div class="campus"></div>
-        <div class="guest"></div>
+        <div class="orientation-date">
+          <img src="resources\images\information-orientation.jpg" alt="Nope">
+        </div>
+        <div class="campus">
+          <img src="resources\images\information-campus-mobile.jpg" alt="Nope">
+        </div>
+        <div class="guest">
+          <img src="resources\images\information-guest-lecture.jpg" alt="nope">
+        </div>
 
       </div>
     </div>
