--- a/index.html
+++ b/index.html
@@ -50,12 +50,28 @@
       <div class="orientation top-bot">
         <div class="orientation-date">
           <img src="resources\images\information-orientation.jpg" alt="Nope">
+          <div class="campus-text left-right top-bot">
+            <h2>Orientation Date</h2>
+            <h3>Tue 10/11 '&' Wed 10/12: 8am-3pm</h3>
+             <a href="#our campus">Read More</a>
+          </div>
+
         </div>
         <div class="campus">
           <img src="resources\images\information-campus-mobile.jpg" alt="Nope">
+           <div class="campus-text left-right top-bot">
+             <h2>Our Campus</h2>
+             <h3>Find which campus is close by you</h3>
+              <a href="#our campus">Read More</a>
+           </div>
+
         </div>
         <div class="guest">
           <img src="resources\images\information-guest-lecture.jpg" alt="nope">
+          <div class="campus-text left-right top-bot">
+          <h2>Our Guest Lecture</h2>
+          <h3>Join a keynote with Oliver Sack about music in medical treatment</h3>
+           <a href="#our campus">Read More</a>
         </div>
 
       </div>
