--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
     <div class="container2">
       <div class="container2-A">
         <div class="practice"></div>
-          <h1>Practice</h1>
+        <div class="left-right">
+            <h1>It doesnt hurt to keep practicing</h1>
+            <p>For this project we will provide you with wireframes. A wireframe is a document which contains the positioning<br>of the elements on a page without specifying any other design information.<br>his allows designers and developers to focus on the flow of a site without getting distracted. </p>
+        </div>
+
       </div>
 
       <!--Orientation -->
@@ -52,7 +56,7 @@
           <img src="resources\images\information-orientation.jpg" alt="Nope">
           <div class="campus-text left-right top-bot">
             <h2>Orientation Date</h2>
-            <h3>Tue 10/11 '&' Wed 10/12: 8am-3pm</h3>
+            <h3>Tue 10/11 & Wed 10/12: 8am-3pm</h3>
              <a href="#our campus">Read More</a>
           </div>
 
@@ -70,7 +74,7 @@
           <img src="resources\images\information-guest-lecture.jpg" alt="nope">
           <div class="campus-text left-right top-bot">
           <h2>Our Guest Lecture</h2>
-          <h3>Join a keynote with Oliver Sack about music in medical treatment</h3>
+          <h3>Join a keynote with Oliver Sack<br>about music in medical treatment</h3>
            <a href="#our campus">Read More</a>
         </div>
 
