--- a/index.html
+++ b/index.html
@@ -81,16 +81,14 @@
       </div>
     </div>
   </div>
-    <!-- 3rd section learn -->
+    <!-- 3rd section Start learning -->
     <div class="container3">
-      <div class="start-learning top-bot">
-
+      <div class="start-learning">
+        <span>Start Learning</span>
       </div>
       <div class="course-box">
         <div class="course-top">
-          <div>
-
-        </div>
+          <div></div>
           <div></div>
           <div></div>
         </div>
@@ -101,6 +99,7 @@
         </div>
       </div>
     </div>
+
     <!-- 4th section thesis -->
     <div class="container4">
     <div class="thesis"></div>
