--- a/index.html
+++ b/index.html
@@ -84,18 +84,35 @@
     <!-- 3rd section Start learning -->
     <div class="container3">
       <div class="start-learning">
-        <span>Start Learning</span>
+        <span><h1>Start Learning</h1></span>
       </div>
       <div class="course-box">
         <div class="course-top">
-          <div></div>
-          <div></div>
-          <div></div>
+          <div class="course-size">
+            <img src="\resources\images\course-software.jpg" alt="Problem loading Image">
+            <div>
+              <h1>Software engineering</h1>
+              <h2>Courses<h2>
+              <span>Web Development</span>
+            </div>
+          </div>
+          <div class="course-size">
+            <img src="\resources\images\course-computer-art.jpg" alt="Nope">
+          </div>
+          <div class="course-size">
+            <img src="" alt="">
+          </div>
         </div>
         <div class="course-btm">
-          <div></div>
-          <div></div>
-          <div></div>
+          <div class="course-size">
+            <img src="" alt="">
+          </div>
+          <div class="course-size">
+            <img src="" alt="">
+          </div>
+          <div class="course-size">
+            <img src="" alt="">
+          </div>
         </div>
       </div>
     </div>
