--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- headder -->
     <header>
       <div class= "logo">
-        <img src="resources\images\ic-logo.svg" alt="Problem loading page">
+        <img src="resources/images/ic-logo.svg" alt="Problem loading page">
       </div>
       <div class="colmar">
         <h2>COLMARACADEMY</h2>
@@ -53,7 +53,7 @@
       <!--Orientation -->
       <div class="orientation top-bot">
         <div class="orientation-date">
-          <img src="resources\images\information-orientation.jpg" alt="Nope">
+          <img src="resources/images/information-orientation.jpg" alt="Nope">
           <div class="campus-text left-right top-bot">
             <h2>Orientation Date</h2>
             <h3>Tue 10/11 & Wed 10/12: 8am-3pm</h3>
@@ -62,7 +62,7 @@
 
         </div>
         <div class="campus">
-          <img src="resources\images\information-campus-mobile.jpg" alt="Nope">
+          <img src="resources/images/information-campus-mobile.jpg" alt="Nope">
            <div class="campus-text left-right top-bot">
              <h2>Our Campus</h2>
              <h3>Find which campus is close by you</h3>
@@ -71,7 +71,7 @@
 
         </div>
         <div class="guest">
-          <img src="resources\images\information-guest-lecture.jpg" alt="nope">
+          <img src="resources/images/information-guest-lecture.jpg" alt="nope">
           <div class="campus-text left-right top-bot">
           <h2>Our Guest Lecture</h2>
           <h3>Join a keynote with Oliver Sack<br>about music in medical treatment</h3>
@@ -89,7 +89,7 @@
       <div class="course-box">
         <div class="course-top">
           <div class="course-size">
-            <img src="\resources\images\course-software.jpg" alt="Problem loading Image">
+            <img src="resources/images/course-software.jpg" alt="Problem loading Image">
             <div>
               <h1>Software engineering</h1>
               <h2>Courses<h2>
@@ -97,21 +97,47 @@
             </div>
           </div>
           <div class="course-size">
-            <img src="\resources\images\course-computer-art.jpg" alt="Nope">
+            <img src="resources/images/course-computer-art.jpg" alt="Nope">
+          <div>
+            <h1>Software engineering</h1>
+            <h2>Courses<h2>
+            <span>Web Development</span>
+          </div>
           </div>
           <div class="course-size">
-            <img src="" alt="">
+            <img src="resources/images/course-design.jpg" alt="">
+            <div>
+              <h1>Software engineering</h1>
+              <h2>Courses<h2>
+              <span>Web Development</span>
+            </div>
+
           </div>
         </div>
         <div class="course-btm">
           <div class="course-size">
-            <img src="" alt="">
+            <img src="resources/images/course-data.jpg" alt="">
+            <div>
+              <h1>Software engineering</h1>
+              <h2>Courses<h2>
+              <span>Web Development</span>
+            </div>
           </div>
           <div class="course-size">
-            <img src="" alt="">
+            <img src="resources/images/course-business.jpg" alt="">
+            <div>
+              <h1>Software engineering</h1>
+              <h2>Courses<h2>
+              <span>Web Development</span>
+            </div>
           </div>
           <div class="course-size">
-            <img src="" alt="">
+            <img src="resources/images/course-marketing.jpg" alt="">
+            <div>
+              <h1>Software engineering</h1>
+              <h2>Courses<h2>
+              <span>Web Development</span>
+            </div>
           </div>
         </div>
       </div>
