--- a/index.html
+++ b/index.html
@@ -145,14 +145,22 @@
 
     <!-- 4th section thesis -->
     <div class="container4">
-    <div class="thesis"></div>
-    <div>
-      <div></div>
-      <div></div>
-    </div>
+      <div class="thesis">
+        <span><h1>Thesis</h1></span>
+      </div>
+      <div class="cont4-wrap">
+        <div class="vids">
+          <video width="750" height="400" controls>
+            <source src="resources/video/thesis.mp4" type="video/mp4">
+            <source src="resources/video/thesis.ogg" type="video/ogg">
+              Your browser does not support the video tag.
+          </video>
+        </div>
+        <div class="fisma-wrap"></div>
+      </div>
 
     </div>
-  </div>
+
   </body>
   <!-- Footer -->
   <footer>Alan</footer>
