--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro" rel="stylesheet">
+
   </head>
   <body>
     <!-- headder -->
@@ -28,9 +29,9 @@
       </div>
     </header>
     <!-- Banner -->
-    <div class="banner top-bot left-right">
+    <div class="banner left-right">
     <!-- main Pic  -->
-      <div class ="first-pic left-right">
+      <div class ="first-pic top-bot left-right">
         <img src="resources/images/banner.jpg" alt="">
       </div>
       <!--learn section  -->
@@ -43,12 +44,12 @@
       </div>
     </div>
     <!--2nd section practice  -->
-    <div class="container2 container2-A-back">
+    <div class="container2">
       <div class="container2-A top-bot left-right">
        <img src="resources/images/information-main.jpg" alt="">
         <div class="left-right">
             <h1>It doesnt hurt to keep practicing</h1>
-            <p>For this project we will provide you with wireframes. A wireframe is a document which contains the positioning<br>of the elements on a page without specifying any other design information.<br>his allows designers and developers to focus on the flow of a site without getting distracted. </p>
+            <p>For this project we will provide you with wireframes. A wireframe is a document which contains the positioning of the elements on a page without specifying any other design information.<br>This allows designers and developers to focus on the flow of a site without getting distracted. </p>
         </div>
 
       </div>
@@ -77,7 +78,7 @@
           <img src="resources/images/information-guest-lecture.jpg" alt="nope">
           <div class="campus-text left-right top-bot">
           <h2>Our Guest Lecture</h2>
-          <h3>Join a keynote with Oliver Sack<br>about music in medical treatment</h3>
+          <h3>Join a keynote with<i> Oliver Sack</i><br>about music in medical treatment</h3>
            <a href="#our campus">Read More</a>
         </div>
 
@@ -95,51 +96,51 @@
             <img src="resources/images/course-software.jpg" alt="Problem loading Image">
             <div>
               <h2>Software engineering</h2>
-              <h2>Courses<h2>
-              <span>Web Development</span>
+              <h3>Courses<h3>
+              <h4>Web Development, Mobile<br>Development, IOT, APIs</h4>
             </div>
           </div>
           <div class="course-size">
             <img src="resources/images/course-computer-art.jpg" alt="Nope">
           <div>
-            <h1>Software engineering</h1>
-            <h2>Courses<h2>
-            <span>Web Development</span>
+            <h2>Computer Art</h2>
+            <h3>Courses<h3>
+            <h4>Imaging and design, Web Design<br>Motion Graphics & visual Effects,<br>Computer Animation</h4>
           </div>
           </div>
           <div class="course-size" id="margint-right">
             <img src="resources/images/course-design.jpg" alt="">
             <div>
-              <h1>Software engineering</h1>
-              <h2>Courses<h2>
-              <span>Web Development</span>
+              <h2>Design</h3>
+              <h3>Courses<h3>
+              <h4>User Experience Design, User<br>Research, Visual Design</h4>
             </div>
 
           </div>
         </div>
-        <div class="course-btm">
+        <div class="course-btm top-bot">
           <div class="course-size">
             <img src="resources/images/course-data.jpg" alt="">
             <div>
-              <h1>Software engineering</h1>
-              <h2>Courses<h2>
-              <span>Web Development</span>
+              <h2>Data</h2>
+              <h3>Courses<h3>
+              <h4>Data Science, Big Data, SQL Data<br>Visulization</h4>
             </div>
           </div>
           <div class="course-size">
             <img src="resources/images/course-business.jpg" alt="">
             <div>
-              <h1>Software engineering</h1>
-              <h2>Courses<h2>
-              <span>Web Development</span>
+              <h2>Business</h2>
+              <h3>Courses<h3>
+              <h4>Product Development, Business<br>Development, Start-Up</h4>
             </div>
           </div>
           <div class="course-size" id="margint-right">
             <img src="resources/images/course-marketing.jpg" alt="">
             <div>
-              <h1>Software engineering</h1>
-              <h2>Courses<h2>
-              <span>Web Development</span>
+              <h2>Marketing</h2>
+              <h3>Courses<h3>
+              <h4>Analytics, Content Marketing,<br>Mobile Marketing</h4>
             </div>
           </div>
         </div>
@@ -161,7 +162,7 @@
           </video>
         <div class="vids-text">
           <h2>Reimage urban</h2>
-          <p>This project is intended to be completed on your own computer. The resources above will help you build the final outcome.<br> There is no single, correct way to complete this project, so experiment and have fun!</p>
+          <p>This project is intended to be completed on your own computer. The resources above will help you build the final outcome. There is no single, correct way to complete this project, so experiment and have fun!</p>
         </div>
         </div>
         <div class="fisma-wrap">
