--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Banner -->
     <div class="banner left-right">
     <!-- main Pic  -->
-      <div class ="first-pic top-bot left-right">
+      <div class ="first-pic ">
         <img src="resources/images/banner.jpg" alt="">
       </div>
       <!--learn section  -->
@@ -90,6 +90,14 @@
       <div class="start-learning">
         <span><h1>Start Learning</h1></span>
       </div>
+      <div class="mob">
+        <div><span>Software Engineering</span></div>
+        <div><span>Computer Art</span></div>
+        <div><span>Data<</span></div>
+        <div><span>Design<</span></div>
+        <div><span>Buisness</span></div>
+        <div><span>Marketing</span></div>
+      </div>
       <div class="course-box">
         <div class="course-top">
           <div class="course-size">
@@ -142,7 +150,6 @@
               <h3>Courses<h3>
               <h4>Analytics, Content Marketing,<br>Mobile Marketing</h4>
             </div>
-          </div>
         </div>
       </div>
     </div>
