--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       <div class="mob">
         <div><span>Software Engineering</span></div>
         <div><span>Computer Art</span></div>
-        <div><span>Data<</span></div>
-        <div><span>Design<</span></div>
+        <div><span>Data</span></div>
+        <div><span>Design</span></div>
         <div><span>Buisness</span></div>
         <div><span>Marketing</span></div>
       </div>
