--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           </video>
         <div class="vids-text">
           <h2>Reimage urban</h2>
-          <p>This project is intended to be completed on your own computer. The resources above will help you build the final outcome. There is no single, correct way to complete this project, so experiment and have fun!</p>
+          <p>This project is intended to be completed on your own computer.The resources above <br>will help you build the final outcome.There is no single, correct way to complete this project,<br> so experiment and have fun!</p>
         </div>
         </div>
         <div class="fisma-wrap">
