--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <!--learn section  -->
       <div class="learn">
-        <h1>Learn Something New<br>Everyday</h1>
+        <h1>Learn Something<br>New Everyday</h1>
         <div class="ban-state"><h2>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</h2></div>
         <div class="start-btn">
           <span>Start Here</span>
@@ -105,7 +105,7 @@
             <div>
               <h2>Software engineering</h2>
               <h3>Courses<h3>
-              <h4>Web Development, Mobile<br>Development, IOT, APIs</h4>
+              <h4>Web Development, Mobile<br>Development, IOT, APIs <br><br><br><br><br><br></h4>
             </div>
           </div>
           <div class="course-size">
@@ -132,7 +132,7 @@
             <div>
               <h2>Data</h2>
               <h3>Courses<h3>
-              <h4>Data Science, Big Data, SQL Data<br>Visulization</h4>
+              <h4>Data Science, Big Data, SQL Data<br>Visulization  <br><br><br><br><br><br></h4>
             </div>
           </div>
           <div class="course-size">
@@ -182,7 +182,7 @@
           </div>
           <div class="now-and-then">
             <img src="resources/images/thesis-now-and-then.jpg" alt="">
-            <div class="cont4-text">
+            <div class=" cont4-text">
             <h2>Fisma: Design and Prototype</h2>
             <p>Designer showcase of new prototype product</p>
             </div>
