--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
       <div class="colmar">
         <h2>COLMARACADEMY</h2>
       </div>
+      <div class="mob-logo">
+      <!-- mob bmnner -->
+      <div >
+        <img src="resources/images/ic-logo.svg" alt="Problem loading page">
+      </div>
+      <div>
+        <img src="resources/images/ic-on-campus.svg" alt="problem loading image">
+      </div>
+      <div>
+        <img src="resources/images/ic-online.svg" alt="problem loading imag">
+      </div>
+      <div>
+        <img src="resources/images/ic-login.svg" alt="problem loading imag">
+      </div>
+    </div>
       <div class="flex-end">
         <nav>
           <li>On Campus</li>
@@ -32,7 +47,7 @@
     <div class="banner left-right">
     <!-- main Pic  -->
       <div class ="first-pic ">
-        <img src="resources/images/banner.jpg" alt="">
+        <img src="resources/images/banner.jpg" alt="problem loading imag">
       </div>
       <!--learn section  -->
       <div class="learn">
@@ -46,7 +61,7 @@
     <!--2nd section practice  -->
     <div class="container2">
       <div class="container2-A top-bot left-right">
-       <img src="resources/images/information-main.jpg" alt="">
+       <img src="resources/images/information-main.jpg" alt="problem loading imag">
         <div class="left-right">
             <h1>It doesnt hurt to keep practicing</h1>
             <p>For this project we will provide you with wireframes. A wireframe is a document which contains the positioning of the elements on a page without specifying any other design information.<br>This allows designers and developers to focus on the flow of a site without getting distracted. </p>
@@ -57,7 +72,7 @@
       <!--Orientation -->
       <div class="orientation top-bot">
         <div class="orientation-date">
-          <img src="resources/images/information-orientation.jpg" alt="Nope">
+          <img src="resources/images/information-orientation.jpg" alt="problem loading imag">
           <div class="campus-text left-right top-bot">
             <h2>Orientation Date</h2>
             <h3>Tue 10/11 & Wed 10/12: 8am-3pm</h3>
@@ -66,7 +81,7 @@
 
         </div>
         <div class="campus">
-          <img src="resources/images/information-campus-mobile.jpg" alt="Nope">
+          <img src="resources/images/information-campus-mobile.jpg" alt="problem loading imag">
            <div class="campus-text left-right top-bot">
              <h2>Our Campus</h2>
              <h3>Find which campus is close by you</h3>
@@ -75,7 +90,7 @@
 
         </div>
         <div class="guest">
-          <img src="resources/images/information-guest-lecture.jpg" alt="nope">
+          <img src="resources/images/information-guest-lecture.jpg" alt="problem loading imag">
           <div class="campus-text left-right top-bot">
           <h2>Our Guest Lecture</h2>
           <h3>Join a keynote with<i> Oliver Sack</i><br>about music in medical treatment</h3>
@@ -109,7 +124,7 @@
             </div>
           </div>
           <div class="course-size">
-            <img src="resources/images/course-computer-art.jpg" alt="Nope">
+            <img src="resources/images/course-computer-art.jpg" alt="problem loading imag">
           <div>
             <h2>Computer Art</h2>
             <h3>Courses<h3>
@@ -117,7 +132,7 @@
           </div>
           </div>
           <div class="course-size" id="margint-right">
-            <img src="resources/images/course-design.jpg" alt="">
+            <img src="resources/images/course-design.jpg" alt="problem loading imag">
             <div>
               <h2>Design</h3>
               <h3>Courses<h3>
@@ -128,7 +143,7 @@
         </div>
         <div class="course-btm top-bot">
           <div class="course-size">
-            <img src="resources/images/course-data.jpg" alt="">
+            <img src="resources/images/course-data.jpg" alt="problem loading imag">
             <div>
               <h2>Data</h2>
               <h3>Courses<h3>
@@ -136,7 +151,7 @@
             </div>
           </div>
           <div class="course-size">
-            <img src="resources/images/course-business.jpg" alt="">
+            <img src="resources/images/course-business.jpg" alt="problem loading imag">
             <div>
               <h2>Business</h2>
               <h3>Courses<h3>
@@ -144,7 +159,7 @@
             </div>
           </div>
           <div class="course-size" id="margint-right">
-            <img src="resources/images/course-marketing.jpg" alt="">
+            <img src="resources/images/course-marketing.jpg" alt="problem loading imag">
             <div>
               <h2>Marketing</h2>
               <h3>Courses<h3>
@@ -174,14 +189,14 @@
         </div>
         <div class="fisma-wrap">
           <div class="fisma">
-            <img src="resources/images/thesis-fisma.jpg" alt="">
+            <img src="resources/images/thesis-fisma.jpg" alt="problem loading imag">
             <div class="cont4-text">
             <h2>Fisma: Design and Prototype</h2>
             <p>Designer showcase of new prototype product</p>
             </div>
           </div>
           <div class="now-and-then">
-            <img src="resources/images/thesis-now-and-then.jpg" alt="">
+            <img src="resources/images/thesis-now-and-then.jpg" alt="problem loading imag">
             <div class=" cont4-text">
             <h2>Fisma: Design and Prototype</h2>
             <p>Designer showcase of new prototype product</p>
