--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
       <!--Orientation -->
       <div class="orientation top-bot">
         <div class="orientation-date">
-          <img src="resources/images/information-orientation.jpg" alt="problem loading imag">
+          <img src="resources/images/information-orientation.jpg" class="ori-img"alt="problem loading image">
+          <img src="resources/images/information-orientation-mobile.jpg" class="ori-img-mob"alt="problem loading image">
           <div class="campus-text left-right top-bot">
             <h2>Orientation Date</h2>
             <h3>Tue 10/11 & Wed 10/12: 8am-3pm</h3>
@@ -81,7 +82,8 @@
 
         </div>
         <div class="campus">
-          <img src="resources/images/information-campus-mobile.jpg" alt="problem loading imag">
+          <img src="resources/images/information-campus.jpg" class="ori-img"alt="problem loading image">
+            <img src="resources/images/information-campus-mobile.jpg" class="ori-img-mob"alt="problem loading imag">
            <div class="campus-text left-right top-bot">
              <h2>Our Campus</h2>
              <h3>Find which campus is close by you</h3>
@@ -90,7 +92,8 @@
 
         </div>
         <div class="guest">
-          <img src="resources/images/information-guest-lecture.jpg" alt="problem loading imag">
+          <img src="resources/images/information-guest-lecture.jpg" class="ori-img" alt="problem loading image">
+          <img src="resources/images/information-guest-lecture-mobile.jpg" class="ori-img-mob" alt="problem loading image">
           <div class="campus-text left-right top-bot">
           <h2>Our Guest Lecture</h2>
           <h3>Join a keynote with<i> Oliver Sack</i><br>about music in medical treatment</h3>
