--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>COLMARACADEMY</h2>
       </div>
       <div class="mob-logo">
-      <!-- mob bmnner -->
+      <!-- mob imge bmnner -->
       <div >
         <img src="resources/images/ic-logo.svg" alt="Problem loading page">
       </div>
@@ -44,7 +44,7 @@
       </div>
     </header>
     <!-- Banner -->
-    <div class="banner left-right">
+    <div class="banner">
     <!-- main Pic  -->
       <div class ="first-pic ">
         <img src="resources/images/banner.jpg" alt="problem loading imag">
@@ -60,7 +60,7 @@
     </div>
     <!--2nd section practice  -->
     <div class="container2">
-      <div class="container2-A top-bot left-right">
+      <div class="container2-A top-bot">
        <img src="resources/images/information-main.jpg" alt="problem loading imag">
         <div class="left-right">
             <h1>It doesnt hurt to keep practicing</h1>
@@ -71,7 +71,7 @@
 
       <!--Orientation -->
       <div class="orientation top-bot">
-        <div class="orientation-date">
+        <div class="orientation-box">
           <img src="resources/images/information-orientation.jpg" class="ori-img"alt="problem loading image">
           <img src="resources/images/information-orientation-mobile.jpg" class="ori-img-mob"alt="problem loading image">
           <div class="campus-text left-right top-bot">
@@ -81,7 +81,7 @@
           </div>
 
         </div>
-        <div class="campus">
+        <div class="orientation-box">
           <img src="resources/images/information-campus.jpg" class="ori-img"alt="problem loading image">
             <img src="resources/images/information-campus-mobile.jpg" class="ori-img-mob"alt="problem loading imag">
            <div class="campus-text left-right top-bot">
@@ -91,7 +91,7 @@
            </div>
 
         </div>
-        <div class="guest">
+        <div class="orientation-box">
           <img src="resources/images/information-guest-lecture.jpg" class="ori-img" alt="problem loading image">
           <img src="resources/images/information-guest-lecture-mobile.jpg" class="ori-img-mob" alt="problem loading image">
           <div class="campus-text left-right top-bot">
@@ -108,6 +108,7 @@
       <div class="start-learning">
         <span><h1>Start Learning</h1></span>
       </div>
+      <!-- start learning movile version -->
       <div class="mob">
         <div><span>Software Engineering</span></div>
         <div><span>Computer Art</span></div>
@@ -116,6 +117,7 @@
         <div><span>Buisness</span></div>
         <div><span>Marketing</span></div>
       </div>
+
       <div class="course-box">
         <div class="course-top">
           <div class="course-size">
