--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       </div>
     </header>
     <!-- Banner -->
-    <div class="banner">
+    <div class="banner"role="presentation">
     <!-- main Pic  -->
       <div class ="first-pic ">
-        <img src="resources/images/banner.jpg" alt="problem loading imag">
+        <img src="resources/images/banner.jpg" alt="Image of students">
       </div>
       <!--learn section  -->
-      <div class="learn">
+      <div class="learn" >
         <h1>Learn Something<br>New Everyday</h1>
         <div class="ban-state"><h2>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</h2></div>
         <div class="start-btn">
@@ -61,7 +61,7 @@
     <!--2nd section practice  -->
     <div class="container2">
       <div class="container2-A top-bot">
-       <img src="resources/images/information-main.jpg" alt="problem loading imag">
+       <img src="resources/images/information-main.jpg" alt="Image of student">
         <div class="left-right">
             <h1>It doesnt hurt to keep practicing</h1>
             <p>For this project we will provide you with wireframes. A wireframe is a document which contains the positioning of the elements on a page without specifying any other design information.<br>This allows designers and developers to focus on the flow of a site without getting distracted. </p>
@@ -70,7 +70,7 @@
       </div>
 
       <!--Orientation -->
-      <div class="orientation top-bot">
+      <div class="orientation top-bot" role="presentation">
         <div class="orientation-box">
           <img src="resources/images/information-orientation.jpg" class="ori-img"alt="problem loading image">
           <img src="resources/images/information-orientation-mobile.jpg" class="ori-img-mob"alt="problem loading image">
@@ -104,7 +104,7 @@
     </div>
   </div>
     <!-- 3rd section Start learning -->
-    <div class="container3">
+    <div class="container3" role="presentation">
       <div class="start-learning">
         <span><h1>Start Learning</h1></span>
       </div>
@@ -118,7 +118,7 @@
         <div><span>Marketing</span></div>
       </div>
 
-      <div class="course-box">
+      <div class="course-box" role="presentation">
         <div class="course-top">
           <div class="course-size">
             <img src="resources/images/course-software.jpg" alt="Problem loading Image">
